# dispatch

./: .bazelrc  .clangd  .gitignore  MODULE.bazel  README.md  WORKSPACE
broker/: BUILD  broker.cc  broker.h  broker_test.cc  main.cc
client/: main.cc
proto/: BUILD  dispatch.proto
worker/: BUILD  main.cc
